Enhance GWT log messages